fix(UI): overflow conflict between jstreeWidget and Datable responsive

--- a/public/vocables/modules/shared/styles.less
+++ b/public/vocables/modules/shared/styles.less
@@ -251,7 +251,6 @@ html {
 }
 
 .ui-dialog .ui-dialog-content {
-    overflow: hidden;
     box-sizing: border-box;
 }
 
